--- a/SWE-Final-Project/src/Frontend/Css/MainPage.css
+++ b/SWE-Final-Project/src/Frontend/Css/MainPage.css
@@ -236,6 +236,7 @@ body {
   font-family: 'DM Sans', sans-serif;
   border: 1px solid #ccc;
   border-radius: 6px;
+  color: #000;
   outline: none;
   background: #fdf9f6;
 }
